[package]
name = "Client"
version = "0.1.0"
authors = ["Blake Loring <blake_l@parsed.uk>"]

[dependencies]
piston = "0.26.0"
piston_window = "*"
piston2d-graphics = "0.19.0"
freetype-rs = "0.11.0"
find_folder = "0.3.0"
conrod = "0.46.2"
rustc-serialize = "*"
image = "*"

[dependencies.world_lib]
path = "../WorldLib/"